@@ -1,8 +1,9 @@
 # AppleEvents.tcl --
 # 
 #       Experimental!
+#       Some code from Alpha.
 # 
-# $Id: AppleEvents.tcl,v 1.2 2004-08-17 06:19:53 matben Exp $
+# $Id: AppleEvents.tcl,v 1.3 2004-08-18 12:08:58 matben Exp $
 
 namespace eval ::AppleEvents:: { }
 
@@ -20,10 +21,9 @@ proc ::AppleEvents::Init { } {
  
     #tclAE::installEventHandler aevt GURL ::AppleEvents::HandleGURL
 
-    #tclAE::installEventHandler aevt oapp aeom::handleOpenApp
-    #tclAE::installEventHandler aevt rapp aeom::handleOpenApp
-    #tclAE::installEventHandler aevt odoc aeom::handleOpen
-
+    tclAE::installEventHandler aevt oapp ::AppleEvents::OpenAppHandler
+    tclAE::installEventHandler aevt rapp ::AppleEvents::OpenAppHandler
+    tclAE::installEventHandler aevt odoc ::AppleEvents::OpenHandler
     tclAE::installEventHandler aevt pdoc ::AppleEvents::PrintHandler
 
     # Mac OS X have the Quit menu on the Apple menu instead. Catch it!
@@ -38,29 +38,58 @@ proc ::AppleEvents::Init { } {
 
 proc ::AppleEvents::HandleOURL {theAppleEvent theReplyAE} {
 
-    puts "theAppleEvent=$theAppleEvent"
-    puts "theReplyAE=$theReplyAE"
+    ::Debug 4 "::AppleEvents::HandleOURL theAppleEvent=$theAppleEvent"
+
+    
+}
+
+proc ::AppleEvents::OpenAppHandler {theAppleEvent theReplyAE} {
+
+    # Have no idea of what to do here...
+    ::Debug 4 "::AppleEvents::OpenAppHandler theAppleEvent=$theAppleEvent"
+    set eventClass [tclAE::getAttributeData $theAppleEvent evcl]
+    set eventID [tclAE::getAttributeData $theAppleEvent evid]
+    ::Debug 4 "\t eventClass=$eventClass, eventID=$eventID"
+    
+    
+}
+
+proc ::AppleEvents::OpenHandler {theAppleEvent theReplyAE} {
+
+    ::Debug 4 "::AppleEvents::OpenHandler theAppleEvent=$theAppleEvent"
+    set pathDesc [tclAE::getKeyDesc $theAppleEvent ----]
+    set paths [ExtractPaths $pathDesc wasList]
+    tclAE::disposeDesc $pathDesc
+    ::Debug 4 "\t paths=$paths"
+
+    foreach f $paths {	
+	switch -- [file extension $f] {
+	    .can {
+		::WB::New -file $f
+	    }
+	}
+    }
 }
 
 proc ::AppleEvents::PrintHandler {theAppleEvent theReplyAE} {
 
-    puts "theAppleEvent=$theAppleEvent"
-    puts "theReplyAE=$theReplyAE"
-    set eventClass [tclAE::getAttributeData $theAppleEvent evcl]
-    set eventID [tclAE::getAttributeData $theAppleEvent evid]
     set pathDesc [tclAE::getKeyDesc $theAppleEvent ----]
-    puts "eventClass=$eventClass, eventID=$eventID"
-    puts "pathDesc=$pathDesc"
-    
-    
-    #tclAE::disposeDesc $pathDesc
+    set paths [ExtractPaths $pathDesc wasList]
+    tclAE::disposeDesc $pathDesc
 
+    foreach f $paths {	
+	switch -- [file extension $f] {
+	    .can {
+		set wtop [::WB::New -file $f]
+		::UserActions::DoPrintCanvas $wtop
+	    }
+	}
+    }
 }
 
 proc ::AppleEvents::HandleGURL {theAppleEvent theReplyAE} {
     
     puts "theAppleEvent=$theAppleEvent"
-    puts "theReplyAE=$theReplyAE"
     set eventClass [tclAE::getAttributeData $theAppleEvent evcl]
     set eventID [tclAE::getAttributeData $theAppleEvent evid]
     
@@ -69,6 +98,39 @@ proc ::AppleEvents::HandleGURL {theAppleEvent theReplyAE} {
 proc ::AppleEvents::QuitHandler {theAppleEvent theReplyAE} {
     
     ::UserActions::DoQuit
+}
+
+proc ::AppleEvents::ExtractPaths {files {wasList ""}} {
+    
+    set paths {}
+    upvar 1 $wasList listOfPaths
+    
+    switch -- [tclAE::getDescType $files] {
+	"list" {
+	    set count [tclAE::countItems $files]
+	    
+	    for {set item 0} {$item < $count} {incr item} {
+		set fileDesc [tclAE::getNthDesc $files $item]		
+		lappend paths [ExtractPath $fileDesc]
+		tclAE::disposeDesc $fileDesc
+	    }
+	    set listOfPaths 1
+	}
+	default {
+	    lappend paths [ExtractPath $files]
+	    set listOfPaths 1
+	}
+    }
+    return $paths
+}
+
+proc ::AppleEvents::ExtractPath {fileDesc} {
+
+    set alisDesc [tclAE::coerceDesc $fileDesc alis]
+    set path [tclAE::getData $alisDesc TEXT]
+    tclAE::disposeDesc $alisDesc    
+    
+    return $path
 }
 
 #-------------------------------------------------------------------------------
